DRYD-2138: Avoid DeURNing of ObjectNameControlleed  (#553)